[project]
name = "fastapi-app"
version = "0.1.0"
description = "REST APIs to access Postgres Database"
authors = [
    {name = "Tez", email = "tesmond@gmail.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "asyncpg"
]
requires-python = ">=3.11"


[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default.scripts]
start = "uvicorn app.main:app --reload"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
