[project]
name = "fastapi-app"
version = "0.1.0"
description = "REST APIs to access Postgres Database"
authors = [
    {name = "Tez", email = "tesmond@gmail.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "asyncpg"
]
requires-python = ">=3.11"
optional-dependencies = { test = ["pytest", "pytest-asyncio", "httpx"] }


[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
